<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Profile_v1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="photo">photo</string>
    <string name="name">NAME: Mike</string>
    <string name="gender">GENDER: Male</string>
    <string name="age">AGE: XX</string>
    <string name="phone">PHONE: XXX-XXXX</string>
    <string name="info">INFORMATION:</string>
    <string name="pedo">Pedometer</string>
    <string name="heart">Heart Rate</string>
    <string name="loca">Location</string>
    <string name="post">Posture</string>
    <string name="title_activity_heartrate">Heartrate</string>
    <string name="subheart">ECG-Heart Rate</string>
    <string name="returnheart">Return</string>
    <string name="title_activity_pedometer">Pedometer</string>
    <string name="subpedo">Pedometer</string>
    <string name="returnpedo">Return</string>
    <string name="title_activity_location">Location</string>
    <string name="subloca">Location</string>
    <string name="returnloca">Return</string>
    <string name="title_activity_posture">Posture</string>
    <string name="subpost">Posture</string>
    <string name="returnpost">Return</string>
    <string name="title_activity_login">Login</string>
    <string name="title">title</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>

</resources>
